kubernetes/sandbox/template-elixir-api/1_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-elixir-api
  namespace: sandbox
  annotations:
    manifest_path: "kubernetes/sandbox/template-elixir-api/1_deployment.yml"
  labels:
    app: template-elixir-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: template-elixir-api
  template:
    metadata:
      annotations:
        ad.datadoghq.com/template-elixir-api.logs: '[{"source": "template-elixir-api", "service": "template-elixir-api"}]'
      labels:
        app: template-elixir-api
    spec:
      containers:
        - name: template-elixir-api
          image: resuelve/template-elixir-api:latest
          ports:
            - containerPort: 4000
      imagePullSecrets:
        - name: docker-secrets
      nodeSelector:
        cloud.google.com/gke-nodepool: "sandbox-rtd"
