kubernetes/sandbox/template-elixir-api/2_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: template-elixir-api
  namespace: sandbox
spec:
  selector:
    app: template-elixir-api
  ports:
    - name: template-elixir-api
      protocol: TCP
      port: 4000
      targetPort: 4000
